# source-highlighter-rag

./: .env.example  .gitignore  README.md  app.py  codex_audit.py  codex_audit_results.json  evaluate_rag.py  ingest.py  pyproject.toml  requirements.txt
data/: DEMO_GUIDE.md  dataset_manifest.json  demo_questions.json
scripts/: download_equifax_dataset.py
source_viewer/: __init__.py
source_viewer/frontend/: index.html  package-lock.json  package.json
source_viewer/frontend/src/: App.tsx  CitationAnswer.tsx  SourceViewer.tsx  main.tsx  styles.css
tests/: test_claim_highlighting.py  test_codex_audit.py  test_evaluate_rag.py
