[project]
name = "project-1"
version = "0.1.0"
description = "Citation-grounded hybrid RAG application"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb",
    "llama-index",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-gemini",
    "llama-index-readers-file",
    "llama-index-vector-stores-chroma",
    "python-dotenv",
    "rank-bm25",
    "regex",
    "streamlit",
    "torchvision",
]
