[project]
name = "project-1"
version = "0.1.0"
description = "Citation-grounded hybrid RAG application"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb",
    "langchain<1",
    "langchain-community<0.4",
    "langchain-core<1",
    "langchain-ollama<1",
    "langchain-openai<1",
    "llama-index",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-gemini",
    "llama-index-readers-file",
    "llama-index-vector-stores-chroma",
    "pyarrow==21.0.0",
    "python-dotenv",
    "ragas>=0.4.3",
    "rank-bm25",
    "regex",
    "streamlit",
    "torchvision",
]
